# rinha-backend

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
infra/: docker-compose-dev.yml
src/: app.py  ddl.sql  main.py  models.py
tests/: conftest.py  test_routes.py  test_schema.py
