[tool.poetry]
name = "fast-api-py"
version = "0.1.0"
description = ""
authors = ["Danilo Macedo <danilo.macedofernandes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
mypy = "^1.11.1"
pytest = "^8.3.2"
coverage = "^7.6.1"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
